--- a/submission-system/package.json
+++ b/submission-system/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node server/app.js",
     "dev": "nodemon server/app.js",
-    "test": "echo \"No test specified\" && exit 0" // Placeholder for future tests
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -21,7 +20,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/submission-system.git" // Replace with your repository URL
+    "url": "https://github.com/BAT4K/gdsc.git" // Replace with your repository URL
   },
   "engines": {
     "node": ">=14.0.0" // Specify the Node.js version
