--- a/submission-system/package.json
+++ b/submission-system/package.json
@@ -5,7 +5,7 @@
   "main": "server/app.js",
   "scripts": {
     "start": "node server/app.js",
-    "dev": "nodemon server/app.js",
+    "dev": "nodemon server/app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -20,9 +20,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BAT4K/gdsc.git" // Replace with your repository URL
+    "url": "https://github.com/BAT4K/gdsc.git"
   },
   "engines": {
-    "node": ">=14.0.0" // Specify the Node.js version
+    "node": ">=14.0.0"
   }
 }
