--- a/submission-system/package.json
+++ b/submission-system/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
-    "eslint": "^8.0.0" // Optional, if you plan to use ESLint
+    "eslint": "^8.0.0" 
   },
   "author": "Your Name",
   "license": "MIT",
