--- a/submission-system/package.json
+++ b/submission-system/package.json
@@ -2,10 +2,10 @@
   "name": "submission-system",
   "version": "1.0.0",
   "description": "A submission system with a Node.js backend, MongoDB database, and a simple HTML frontend.",
-  "main": "server/server.js",
+  "main": "submission-system/server/server.js",
   "scripts": {
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "start": "node submission-system/server/server.js",
+    "dev": "nodemon submission-system/server/server.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
