--- a/submission-system/vercel.json
+++ b/submission-system/vercel.json
@@ -2,16 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "server/server.js",
+        "src": "submission-system/server/server.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "server/server.js"
+        "dest": "submission-system/server/server.js"
       }
-    ],
-    "public": true
+    ]
   }
   
