--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "build": "echo 'No build step needed'",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
