--- a/submission-system/server/.env
+++ b/submission-system/server/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/submissionSystem
+MONGO_URI=mongodb+srv://db_hansjames4525:db_Hans%404525@bat4k.jaycg.mongodb.net/?retryWrites=true&w=majority&appName=bat4k
