mongo atlas plz

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://db_hansjames4525:db_hansjames4525@bat4k.jaycg.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=bat4k
+MONGO_URI=mongodb+srv://hansjames4525:hansjames4525@bat4k.jaycg.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=bat4k
